# moneta-cli

./: .env.prod.example  .gitignore  AI_MAPPING.md  Cargo.toml  LICENSE-MIT  README.md  architecture.md  config.example.toml  docker-compose.yml
.cargo/: config.toml
.sqlx/: query-1e911463aabfb7115a35ae334ecbfb96f908f649045afcdab3d31b4d0c7eabc7.json  query-2034efdd6809abb45c977950394f58d8e10e42701a22cf3f5548c1f0e1c6ece5.json  query-29eb16da779b58ce2aa85d9ec501d7b5968c75ea821db3f88b27e043965b434d.json  query-2a5da60af8493f7bdc895c1b379f3ed2cfed55d546f7ccf244a1e458a0a49c43.json  query-3ae9362985325d3ddc7562893bbf2c7ecf502c8b10dd433d03507cf2d5449902.json  query-40f5dee8173e5a871d031f281016aa02cc1a25a42eeb9e61da7455d3a45ed7aa.json  query-43cd594526f6d649bd8efb4227ad15635f87a9aa612572f0eb58dccc98778213.json  query-4fc901f1b44363b5cfcc93a4d5d10cc399b084032dd3861fc36890cbff64244e.json  query-50c5929edc02dcbc8af8698994775b5670d4637ca9c09f343d786ce45cde231b.json  query-557dcb86510a15632b65ca87fc34dbf93735ed29af8be42397778dd5e197c5c4.json  query-564c69a1b2cb82fb50ec5e41139960b50e1bd0ef0263eddf3c4b4cc0244ad547.json  query-5a308a97c03a903d1ef911505443246d75bf60c5ec961fbb522c6e0d852ad84e.json  query-637afa9fc991d9500c170777011f07ff9bb602c25d0faba675d4d916f29f8bff.json  query-7f9dad2abb0f3abd4339420e1709ed1553f8dfe420760910de8a2ab6bec3073f.json  query-84630d2e3ca626aa3f4d74ec0faec1c0548b54bc7a228e07dd62bcf800ee47e2.json  query-89c951d4e9f4d0ec4b2656232e959ecf6d7bddbc14cd3d94e211388f82cd9ef4.json  query-8a657f195c2a8490bdf5d38c3b8eac03fe4b3ea1c9158d91affb2ff3cfd3e8f9.json  query-8b985151083b8470699a93a14975ca6a3d3bb4a34c74993c418564dc9b1e162d.json  query-949560c11bea9c8a88054c65db25f12ac18c78f8d5c7cd254259547abf03fd7c.json  query-963854701cf6b06960ffc645b65d5d3d12d56cb14651565b0307341268285e83.json  query-bc6917e0deba107f38983fba6d93b3919dfc071141c60d32b44b17a1c844856e.json  (+4 more)
migrations/: 20260701193536_create_categories_table.sql  (+10 more)
(+60 files in other folders)
