[package]
name = "moneta-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.103" }
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
