[package]
name = "moneta-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.3"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros",
"chrono", "migrate", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
